--- a/src/app/pages/invocador/invocador.component.html
+++ b/src/app/pages/invocador/invocador.component.html
@@ -1,6 +1,6 @@
 <app-loading *ngIf="loading"></app-loading>
 
-<div class="row justify-content-center mt-3" *ngIf="!loading">
+<div class="row justify-content-center mt-3" *ngIf="!loading && isInvocador">
     <div class="col-2 align-self-center">
         <img class="icon" src="../../../assets/img/profileicon/{{invocador.profileIconId}}.png" alt="">
     </div>
@@ -10,7 +10,7 @@
 </div>
 
 
-<div class="row justify-content-center mt-3" *ngIf="!loading">
+<div class="row justify-content-center mt-3" *ngIf="!loading && isInvocador">
     <div class="col align-self-center mt-3" *ngFor="let maestria of maestriaCampeones; let i = index">
         <div class="card" style="width: 18rem;">
             <div><img src="../../../assets/img/tiles/{{campeones[i].id}}_1.jpg" class="card-img-top" alt="{{campeones[i].name}}">
@@ -27,7 +27,7 @@
     </div>
 </div>
 
-<div class="mt-5">
+<div class="mt-5" *ngIf="!loading && isInvocador">
     <ul class="list-group">
         <li class="list-group-item" *ngFor="let partida of partidas">
             <div class="row">
@@ -42,6 +42,7 @@
                     <table class="table">
                         <tbody>
                             <tr *ngFor="let participante of partida.info.participants; let i = index">
+                                <td *ngIf="i < 5"><img src="../../../assets/img/tiles/{{participante.championName}}_0.jpg" width="50px" height="50px" alt="{{campeones[0].name}}"></td>
                                 <td *ngIf="i < 5">{{participante.championName}}</td>
                                 <td *ngIf="i < 5"> Lvl: {{participante.champLevel}}</td>
                                 <td *ngIf="i < 5">{{participante.deaths}}/{{participante.kills}}/{{participante.assists}}</td>
@@ -53,6 +54,7 @@
                     <table class="table">
                         <tbody>
                             <tr *ngFor="let participante of partida.info.participants; let i = index">
+                                <td *ngIf="i >= 5"><img src="../../../assets/img/tiles/{{participante.championName}}_0.jpg" width="50px" height="50px" alt="{{campeones[0].name}}"></td>
                                 <td *ngIf="i >= 5">{{participante.championName}}</td>
                                 <td *ngIf="i >= 5">Lvl: {{participante.champLevel}}</td>
                                 <td *ngIf="i >= 5">{{participante.deaths}}/{{participante.kills}}/{{participante.assists}}</td>
