--- a/src/app/pages/inicio/inicio.component.html
+++ b/src/app/pages/inicio/inicio.component.html
@@ -16,6 +16,6 @@
         </div>
     </div>
 </div>
-<div class="pagination justify-content-center mt-2">
+<div class="pagination justify-content-center mt-2" *ngIf="!loading">
     <pagination-controls (pageChange)="page = $event" previousLabel="Anterior" nextLabel="Siguiente"></pagination-controls>
 </div>
