--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -17,7 +17,7 @@
             </ul>
             <div class="d-flex">
                 <input #txtBuscar (keyup.enter)="buscarInvocador(txtBuscar.value)" class="form-control me-2" type="search" placeholder="Búscar invocador" aria-label="Search">
-                <button (click)="buscarInvocador(txtBuscar.value)" class="btn btn-outline-info" type="reset">Búscar</button>
+                <button (click)="buscarInvocador(txtBuscar.value)" class="btn btn-outline-info" type="submit">Búscar</button>
             </div>
         </div>
     </div>
